--- a/WEB-INF/liferay-plugin-package.properties
+++ b/WEB-INF/liferay-plugin-package.properties
@@ -7,5 +7,5 @@ long-description=Provides tiny URLs for assets and pages
 change-log=
 page-url=http://www.hopeconsultants.org
 author=Hope Consultants International
-licenses=EE
-liferay-versions=6.2.10+
+licenses=CE,EE
+liferay-versions=6.2.5+,6.2.10+
