--- a/WEB-INF/liferay-plugin-package.properties
+++ b/WEB-INF/liferay-plugin-package.properties
@@ -1,6 +1,6 @@
 name=Tiny URL
 module-group-id=liferay
-module-incremental-version=1-1
+module-incremental-version=1.1
 tags=
 short-description=
 long-description=Provides tiny URLs for assets and pages
