--- a/WEB-INF/liferay-plugin-package.properties
+++ b/WEB-INF/liferay-plugin-package.properties
@@ -1,10 +1,10 @@
 name=Tiny URL
 module-group-id=liferay
-module-incremental-version=1.1
+module-incremental-version=1-02
 tags=
 short-description=
 long-description=Provides tiny URLs for assets and pages
-change-log=Add support for page scoped portlets
+change-log=Fix defect concerning incorrect search for article layout
 page-url=http://www.hopeconsultants.org
 author=Hope Consultants International
 licenses=CE,EE
