--- a/WEB-INF/liferay-plugin-package.properties
+++ b/WEB-INF/liferay-plugin-package.properties
@@ -1,10 +1,10 @@
 name=Tiny URL
 module-group-id=liferay
-module-incremental-version=1-02
+module-incremental-version=1-03
 tags=
 short-description=
 long-description=Provides tiny URLs for assets and pages
-change-log=Fix defect concerning incorrect search for article layout
+change-log=In the latest fixpack, code to store friendly URL in request attributes has been removed from FriendlyURLServlet
 page-url=http://www.hopeconsultants.org
 author=Hope Consultants International
 licenses=CE,EE
