--- a/tinyurl-service/build.gradle
+++ b/tinyurl-service/build.gradle
@@ -1,3 +1,6 @@
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
+
 dependencies {
     compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib"
     compileOnly group: "com.liferay", name: "com.liferay.asset.publisher.api"
